# hugegraph-ai

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question_ask.yml
.github/scripts/: check-ai-review-quality.py  test_check_ai_review_quality.py
.github/workflows/: ai-review-watchdog.yml  auto-pr-comment.yml  hugegraph-llm.yml  hugegraph-mcp.yml  rerun-ci.yml  sync.yml  (+1 more)
docker/: env.template
hugegraph-llm/: BENCHMARK_DATASETS.md  GRAPHRAG_BENCHMARK.md  README.md  pyproject.toml
hugegraph-mcp/: MCP_CONTROLLED_DELETE_PLAN.md  README.md  README.zh-CN.md  pyproject.toml
hugegraph-mcp/docs/: ingest_graph_data_validation_fix_plan.md  mcp-v1-prune-prd.md
hugegraph-mcp/hugegraph_mcp/: __init__.py  config.py  envelope.py  gremlin_policy.py  gremlin_safety.py  gremlin_tools.py  guard.py  hugegraph_ai_client.py  hugegraph_client.py  plan_hash.py  schema_tools.py  server.py
hugegraph-mcp/hugegraph_mcp/tools/: extract_graph_data.py  generate_gremlin.py  graph_data_execute.py  graph_data_gremlin.py  graph_data_mapping.py  graph_data_validate.py  import_table.py  ingest_graph_data.py  inspect_graph.py  live_schema.py  manage_graph_data.py  manage_schema.py  query_graph.py  refresh_vid_embeddings.py  schema_utils.py  sql_modes.py  sql_table.py
hugegraph-mcp/tests/: test_config.py  test_envelope.py  test_error_handling.py  test_execute_gremlin_read.py  test_execute_gremlin_write.py  test_execute_schema_operations.py  test_extract_graph_data.py  test_generate_gremlin.py  test_get_live_schema.py  test_gremlin_policy.py  test_gremlin_safety.py  test_guard.py  test_hugegraph_ai_client.py  test_import_graph_data_tool.py  test_import_table.py  test_ingest_graph_data.py  test_inspect_graph.py  test_manage_graph_data.py  test_manage_graph_data_tool.py  test_manage_schema.py  test_plan_hash.py  test_query_graph.py  test_readonly_mode.py  test_refresh_vid_embeddings.py  test_schema_utils.py  test_server_query_graph_tool.py  test_sql_table.py  test_v1_stable_tools.py
hugegraph-mcp/tests/integration/: test_real_write_path.py
hugegraph-ml/: README.md  pyproject.toml
hugegraph-python-client/: README.md  pyproject.toml
rules/: base-role.md
scripts/: apache-release.sh  async_load_probe.py  lint_async_no_requests.py  mock_llm_server.py
vermeer-python-client/: README.md  pyproject.toml
(+409 files in other folders)
