# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "hugegraph-mcp"
version = "0.1.0"
description = "FastMCP server that exposes HugeGraph schema & Gremlin tools over MCP/STDIO"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Apache HugeGraph Contributors", email = "dev@hugegraph.apache.org" },
]

dependencies = [
    "fastmcp>=2.2.0",
    "hugegraph-python-client @ git+https://github.com/apache/incubator-hugegraph-ai.git#subdirectory=hugegraph-python-client",
]
[project.scripts]
hugegraph-mcp = "hugegraph_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hugegraph_mcp"]

[tool.hatch.metadata]
allow-direct-references = true
